Version 2.8
-----------
* Add 'public link' column on quiz management
* Use of jQuery DataTables on large tables
* Modify QuestionsManagement, UserManagement, LevelManagement to add more info
* Update VIEW vmembers, include UUID, remove password
* Remove VIEW vtop_week
* Modify members profiles call to use UUID instead of Id

Version 2.7
-----------
* Allow users to change its profile image, with file upload included
* IMPORTANT!: We add a new column to members table to put profile image:
    ALTER TABLE `members` ADD `profile_image` VARCHAR( 250 ) NULL
* All JS is now managed by head.js. Trying to improve load times
* Put some icons on administrator interface
* Re-styled view profile page. Now it's awesome!
* [#188] New feature: 'Crear un 'timeline' sobre l'activitat de GoW'
* [#189] New feature: 'File upload'

Version 2.6
-----------
* [#186] New feature: 'Permetre 'preview' de les preguntes'
* [#198] New feature: 'Permetre enllaçar URL protegides'
* [#200] Bug solved: 'Algunes preguntes donen punts negatius'
* [#199] Bug solved: 'No es mostren els codis HTML de les preguntes'
* [#197] Bug solved: 'Error al crear una pregunta'
* [#196] Bug solved: 'Pantalla blanca al respondre una pregunta'

Version 2.5
-----------
First version with CHANGELOG